<resources>
    <string name="app_name">Pillert</string>
    <string name="pillert_logo_string">Pillert logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="compartment_one">Compartment one</string>
    <string name="compartment_two">Compartment two</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tablet_name">Tablet name</string>
    <string name="tablet_quantity">Tablet quantity</string>
    <string name="consumable_time">Consumable time</string>
    <string name="quantity">Quantity</string>
    <string name="time">TIME</string>
    <string name="set_time">Set time</string>
    <string name="scan">Scan</string>
    <string name="select_pillert_and_start_connection">Scan and select Pillert</string>
    <string name="consumption_quantity">Consumption quantity</string>
    <string name="eject">Eject</string>
    <string name="name">Name</string>
    <string name="timetxt">Time</string>
</resources>
